--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "dotenv": "^17.2.0",
+    "exceljs": "^4.4.0",
+    "express": "^4.21.2",
     "googleapis": "^144.0.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
@@ -22,7 +25,10 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.3",
     "@types/firebase": "^3.2.3",
-    "@types/node": "^22.10.1"
+    "@types/node": "^22.10.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
