--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -13,7 +13,8 @@
     "@reduxjs/toolkit": "^2.4.0",
     "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.4.7",
-    "firebase": "^11.0.2",
+    "firebase": "^11.10.0",
+    "install": "^0.13.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
